--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ layout: home
 <!-- Pagination links -->
 <div class="pagination">
   {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path }}" class="previous">Назад.</a>
+    <a href="{{ paginator.previous_page_path }}" class="previous">назад</a>
   {% endif %}
   <span class="page_number ">страница: {{ paginator.page }} из {{ paginator.total_pages }}</span>
   {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path }}" class="next">Вперед.</a>
+    <a href="{{ paginator.next_page_path }}" class="next">вперед</a>
   {% endif %}
 </div>
 
