--- a/subscription.html
+++ b/subscription.html
@@ -3,13 +3,14 @@ layout: page
 title: Подписка
 permalink: /subscription/
 ---
-<form action="https://getsimpleform.com/messages?form_api_token=25d273b74e476783ccbc1ae150032b7d" method="post">
-  Пожалуйста, подписывайтесь на рассылку &nbsp;
-  <input type="text" placeholder="Ваше имя и фамилия" name="name">
-  <input type="email" placeholder="Ваш email" name="email" required>
-  <input type='hidden' name='redirect_to' value='http://karmelalla.com#subscription' />
-  <input type="submit" value="Подписаться" id="submit">
-</form>
- 
- 
+<div class="subscribe-page">
+  <form action="https://getsimpleform.com/messages?form_api_token=25d273b74e476783ccbc1ae150032b7d" method="post">
+    Пожалуйста, подписывайтесь на рассылку &nbsp;
+    <input type="text" placeholder="Ваше имя и фамилия" name="name">
+    <input type="email" placeholder="Ваш email" name="email" required>
+    <input type='hidden' name='redirect_to' value='http://karmelalla.com#subscription' />
+    <input type="submit" value="Подписаться" id="submit">
+  </form>
+</div>   
+
 
