--- a/subscription.html
+++ b/subscription.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Подписка
-permalink: /subscription/
+permalink: /subscribe/
 ---
 <div class="subscribe-page">
   <form action="https://getsimpleform.com/messages?form_api_token=25d273b74e476783ccbc1ae150032b7d" method="post">
