--- a/subscription.html
+++ b/subscription.html
@@ -4,7 +4,7 @@ title: Подписка
 permalink: /subscribe/
 ---
 <div class="subscribe-page">
-  <form action="https://getsimpleform.com/messages?form_api_token=25d273b74e476783ccbc1ae150032b7d" method="post">
+  <form>
     Пожалуйста, подписывайтесь на рассылку &nbsp;
     <input type="text" placeholder="Ваше имя и фамилия" name="name">
     <input type="email" placeholder="Ваш email" name="email" required>
