--- a/subscription.html
+++ b/subscription.html
@@ -5,7 +5,7 @@ permalink: /subscribe/
 ---
 <div class="subscribe-page">
   <form>
-    Чтобы всегда получать письма о том, что вышел новый пост, пожалуйста, оставьте свой email здесь  &nbsp;
+    Чтобы всегда быть в курсе и первым узнавать о новых статьях, пожалуйста, оставьте свой email здесь:  &nbsp;
     <input type="text" placeholder="Ваше имя и фамилия" name="name">
     <input type="email" placeholder="Ваш email" name="email" required>
     <input type='hidden' name='redirect_to' value='http://karmelalla.com#subscription' />
