subscribe when javascript is off

--- a/subscription.html
+++ b/subscription.html
@@ -4,12 +4,10 @@ title: Подписка
 permalink: /subscribe/
 ---
 <div class="subscribe-page">
-  <form>
+  <form action="https://getsimpleform.com/messages?form_api_token=25d273b74e476783ccbc1ae150032b7d" method="post">
     Чтобы всегда быть в курсе и первым узнавать о новых статьях, пожалуйста, оставьте свой email здесь:  &nbsp;
-    <input type="text" placeholder="Ваше имя и фамилия" name="name">
-    <input type="email" placeholder="Ваш email" name="email" required>
-    <input type='hidden' name='redirect_to' value='http://karmelalla.com#subscription' />
-    <input type="submit" value="Подписаться" id="submit">
+    <input type='hidden' name='redirect_to' value='http://karmelalla.com' />
+    {% include subscribe-form.html %}
   </form>
 </div>   
 
