change text for subscription in post

--- a/subscription.html
+++ b/subscription.html
@@ -5,7 +5,7 @@ permalink: /subscribe/
 ---
 <div class="subscribe-page">
   <form action="https://getsimpleform.com/messages?form_api_token=25d273b74e476783ccbc1ae150032b7d" method="post">
-    Чтобы всегда быть в курсе и первым узнавать о новых статьях, пожалуйста, оставьте свой email здесь:  &nbsp;
+    Чтобы всегда быть в курсе и первым узнавать о новых статьях, пожалуйста, оставьте свой email здесь:
     <input type='hidden' name='redirect_to' value='http://karmelalla.com' />
     {% include subscribe-form.html %}
   </form>
