--- a/subscription.html
+++ b/subscription.html
@@ -2,6 +2,7 @@
 layout: page
 title: Подписка
 permalink: /subscribe/
+hidden: true
 ---
 <div class="subscribe-page">
   <form action="https://getsimpleform.com/messages?form_api_token=25d273b74e476783ccbc1ae150032b7d" method="post">
